Added .slugignore for Heroku and added URL to the notebook

--- a/workshop1.ipynb
+++ b/workshop1.ipynb
@@ -1352,6 +1352,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Url del servicio: https://workshop1-unal.herokuapp.com/?url=<URL> donde <URL> es la dirección de la imagen que se desea clasificar."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
